# cadex_test_case

./: CMakeLists.txt  README.md
include/: curves.hpp  parallel.hpp  random_filler.hpp  utility.hpp
shared_objects/: main
src/: curves.cpp  main.cpp  parallel.cpp  random_filler.cpp  utility.cpp
tests/: CMakeLists.txt
